feat: Introduce unified prediction and training scripts for various models
- Added `run_predict.py` for folder-based anomaly prediction with multiple models.
- Removed individual prediction scripts for CNN Multi-Scale, DINOv2, MobileNet, ResNet, SIFE, and SIFE CUDA.
- Added `run_realtime.py` for real-time camera predictions with model selection.
- Added `run_train.py` for unified training of models with a single command.
- Removed individual training scripts for CNN Multi-Scale, DINOv2, MobileNet, ResNet, SIFE, and SIFE CUDA.
- Introduced `verify_sife.py` for model verification on its training test set.
- Updated `segmentation.py` to correct base directory and adjust augmentation parameters.

--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,13 @@ tmp/
 data/*
 data_yolo/
 model/*
+
+augmentation_result_1
+result
+.results_yolo/
+result_1class_1img
+result_backup
+result_fcdd
+result_mobile_sife_cuda
+result_predict_test
+result_resnet
