Refactor and enhance image augmentation and model training scripts
- Removed `run_augmentation_result.py` as its functionality is integrated elsewhere.
- Updated `run_finetune_backbone.py` to include timestamped output filenames and improved logging.
- Modified `run_predict.py` to ensure deterministic behavior by sorting model paths.
- Enhanced `run_realtime.py` and `run_train.py` to reflect new directory structures and added support for custom backbone paths.
- Deleted `segmentation.py` as its functionality is no longer needed.
- Introduced `structure.py` to create a dataset folder structure dynamically.
- Removed `verify_sife.py` as it is deprecated.

--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,7 @@ tmp/
 
 data/*
 data_yolo/
+data_backup/*
 model/*
 
 augmentation_result_1
@@ -73,3 +74,8 @@ result_predict_test
 result_resnet
 augmentation_result_1.zip
 result.zip
+data_train_backbone
+data_scrap
+data_scrap_backup
+data_scrap_resize
+data_train_backbone_backup
