Refactor and enhance image processing and augmentation pipeline
- Updated ResNet configuration to use a specific backbone model and adjusted layer settings.
- Modified pill augmentation settings to reduce augmentation count and adjust brightness parameters.
- Improved padding functionality in `PillAugmenter` to ensure square images with black padding.
- Enhanced rotation functionality to allow for any angle and added center cropping.
- Changed output directory in `pill_collect.py` for better organization.
- Adjusted image input settings in `pill_process.py` to allow for more flexible directory structures.
- Increased minimum and maximum image counts for backbone training in `pill_process.py`.
- Updated output directory structure in `run_finetune_backbone.py` for better file management.
- Implemented early stopping mechanism in the training loop for improved model training efficiency.
- Added utility function to fix image file extensions in `run_finetune_backbone.py`.
- Introduced a new visualization script `visualize_features.py` for feature extraction and analysis.
- Updated model module references in `run_predict.py` for consistency with new naming conventions.

--- a/.gitignore
+++ b/.gitignore
@@ -66,8 +66,7 @@ model/*
 augmentation_result_1
 result
 .results_yolo/
-result_1class_1img
-result_backup
+data_backup
 result_fcdd
 result_mobile_sife_cuda
 result_predict_test
@@ -79,3 +78,12 @@ data_scrap
 data_scrap_backup
 data_scrap_resize
 data_train_backbone_backup
+
+Core_ResnetPatchCore.zip
+data.zip
+
+data_scrap_resize
+data_scrap_resize_backup
+data_train_defection
+data_backbone_augment
+data_backbone_augment_backup
